--- a/package/crds/compute.gcp.upbound.io_networkpeeringroutesconfigs.yaml
+++ b/package/crds/compute.gcp.upbound.io_networkpeeringroutesconfigs.yaml
@@ -78,8 +78,20 @@ spec:
                   exportCustomRoutes:
                     description: Whether to export the custom routes to the peer network.
                     type: boolean
+                  exportSubnetRoutesWithPublicIp:
+                    description: |-
+                      Whether subnet routes with public IP range are exported.
+                      IPv4 special-use ranges are always exported to peers and
+                      are not controlled by this field.
+                    type: boolean
                   importCustomRoutes:
                     description: Whether to import the custom routes to the peer network.
+                    type: boolean
+                  importSubnetRoutesWithPublicIp:
+                    description: |-
+                      Whether subnet routes with public IP range are imported.
+                      IPv4 special-use ranges are always imported from peers and
+                      are not controlled by this field.
                     type: boolean
                   network:
                     description: The name of the primary network for the peering.
@@ -259,8 +271,20 @@ spec:
                   exportCustomRoutes:
                     description: Whether to export the custom routes to the peer network.
                     type: boolean
+                  exportSubnetRoutesWithPublicIp:
+                    description: |-
+                      Whether subnet routes with public IP range are exported.
+                      IPv4 special-use ranges are always exported to peers and
+                      are not controlled by this field.
+                    type: boolean
                   importCustomRoutes:
                     description: Whether to import the custom routes to the peer network.
+                    type: boolean
+                  importSubnetRoutesWithPublicIp:
+                    description: |-
+                      Whether subnet routes with public IP range are imported.
+                      IPv4 special-use ranges are always imported from peers and
+                      are not controlled by this field.
                     type: boolean
                   network:
                     description: The name of the primary network for the peering.
@@ -609,11 +633,23 @@ spec:
                   exportCustomRoutes:
                     description: Whether to export the custom routes to the peer network.
                     type: boolean
+                  exportSubnetRoutesWithPublicIp:
+                    description: |-
+                      Whether subnet routes with public IP range are exported.
+                      IPv4 special-use ranges are always exported to peers and
+                      are not controlled by this field.
+                    type: boolean
                   id:
                     description: an identifier for the resource with format projects/{{project}}/global/networks/{{network}}/networkPeerings/{{peering}}
                     type: string
                   importCustomRoutes:
                     description: Whether to import the custom routes to the peer network.
+                    type: boolean
+                  importSubnetRoutesWithPublicIp:
+                    description: |-
+                      Whether subnet routes with public IP range are imported.
+                      IPv4 special-use ranges are always imported from peers and
+                      are not controlled by this field.
                     type: boolean
                   network:
                     description: The name of the primary network for the peering.
