--- a/package/crds/compute.gcp.upbound.io_regiondisks.yaml
+++ b/package/crds/compute.gcp.upbound.io_regiondisks.yaml
@@ -1251,6 +1251,16 @@ spec:
                             type: object
                         type: object
                     type: object
+                  createSnapshotBeforeDestroy:
+                    description: |-
+                      If set to true, a snapshot of the disk will be created before it is destroyed.
+                      If your disk is encrypted with customer managed encryption keys these will be reused for the snapshot creation.
+                      The name of the snapshot by default will be {{disk-name}}-YYYYMMDD-HHmm
+                    type: boolean
+                  createSnapshotBeforeDestroyPrefix:
+                    description: This will set a custom name prefix for the snapshot
+                      that's created when the disk is deleted.
+                    type: string
                   description:
                     description: |-
                       An optional description of this resource. Provide this property when
@@ -1277,6 +1287,27 @@ spec:
                         description: |-
                           Specifies a 256-bit customer-supplied encryption key, encoded in
                           RFC 4648 base64 to either encrypt or decrypt this resource.
+                          Note: This property is sensitive and will not be displayed in the plan.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
+                      rsaEncryptedKeySecretRef:
+                        description: |-
+                          Specifies an RFC 4648 base64 encoded, RSA-wrapped 2048-bit
+                          customer-supplied encryption key to either encrypt or decrypt
+                          this resource. You can provide either the rawKey or the rsaEncryptedKey.
                           Note: This property is sensitive and will not be displayed in the plan.
                         properties:
                           key:
@@ -1556,6 +1587,16 @@ spec:
                             type: object
                         type: object
                     type: object
+                  createSnapshotBeforeDestroy:
+                    description: |-
+                      If set to true, a snapshot of the disk will be created before it is destroyed.
+                      If your disk is encrypted with customer managed encryption keys these will be reused for the snapshot creation.
+                      The name of the snapshot by default will be {{disk-name}}-YYYYMMDD-HHmm
+                    type: boolean
+                  createSnapshotBeforeDestroyPrefix:
+                    description: This will set a custom name prefix for the snapshot
+                      that's created when the disk is deleted.
+                    type: string
                   description:
                     description: |-
                       An optional description of this resource. Provide this property when
@@ -1582,6 +1623,27 @@ spec:
                         description: |-
                           Specifies a 256-bit customer-supplied encryption key, encoded in
                           RFC 4648 base64 to either encrypt or decrypt this resource.
+                          Note: This property is sensitive and will not be displayed in the plan.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
+                      rsaEncryptedKeySecretRef:
+                        description: |-
+                          Specifies an RFC 4648 base64 encoded, RSA-wrapped 2048-bit
+                          customer-supplied encryption key to either encrypt or decrypt
+                          this resource. You can provide either the rawKey or the rsaEncryptedKey.
                           Note: This property is sensitive and will not be displayed in the plan.
                         properties:
                           key:
@@ -1944,6 +2006,16 @@ spec:
                         description: Primary disk for asynchronous disk replication.
                         type: string
                     type: object
+                  createSnapshotBeforeDestroy:
+                    description: |-
+                      If set to true, a snapshot of the disk will be created before it is destroyed.
+                      If your disk is encrypted with customer managed encryption keys these will be reused for the snapshot creation.
+                      The name of the snapshot by default will be {{disk-name}}-YYYYMMDD-HHmm
+                    type: boolean
+                  createSnapshotBeforeDestroyPrefix:
+                    description: This will set a custom name prefix for the snapshot
+                      that's created when the disk is deleted.
+                    type: string
                   creationTimestamp:
                     description: Creation timestamp in RFC3339 text format.
                     type: string
@@ -1976,6 +2048,10 @@ spec:
                           encryption key that protects this resource.
                         type: string
                     type: object
+                  diskId:
+                    description: The unique identifier for the resource. This identifier
+                      is defined by the server.
+                    type: string
                   effectiveLabels:
                     additionalProperties:
                       type: string
