--- a/package/crds/compute.gcp.upbound.io_routerpeers.yaml
+++ b/package/crds/compute.gcp.upbound.io_routerpeers.yaml
@@ -1735,6 +1735,20 @@ spec:
                     description: Enable IPv6 traffic over BGP Peer. If not specified,
                       it is disabled by default.
                     type: boolean
+                  exportPolicies:
+                    description: |-
+                      routers.list of export policies applied to this peer, in the order they must be evaluated.
+                      The name must correspond to an existing policy that has ROUTE_POLICY_TYPE_EXPORT type.
+                    items:
+                      type: string
+                    type: array
+                  importPolicies:
+                    description: |-
+                      routers.list of import policies applied to this peer, in the order they must be evaluated.
+                      The name must correspond to an existing policy that has ROUTE_POLICY_TYPE_IMPORT type.
+                    items:
+                      type: string
+                    type: array
                   interface:
                     description: Name of the interface the BGP peer is associated
                       with.
@@ -2198,6 +2212,16 @@ spec:
                             type: string
                         type: object
                     type: object
+                  zeroAdvertisedRoutePriority:
+                    description: |-
+                      The user-defined zero-advertised-route-priority for a advertised-route-priority in BGP session.
+                      This value has to be set true to force the advertised_route_priority to be 0.
+                    type: boolean
+                  zeroCustomLearnedRoutePriority:
+                    description: |-
+                      The user-defined zero-custom-learned-route-priority for a custom-learned-route-priority in BGP session.
+                      This value has to be set true to force the custom_learned_route_priority to be 0.
+                    type: boolean
                 type: object
               initProvider:
                 description: |-
@@ -2326,6 +2350,20 @@ spec:
                     description: Enable IPv6 traffic over BGP Peer. If not specified,
                       it is disabled by default.
                     type: boolean
+                  exportPolicies:
+                    description: |-
+                      routers.list of export policies applied to this peer, in the order they must be evaluated.
+                      The name must correspond to an existing policy that has ROUTE_POLICY_TYPE_EXPORT type.
+                    items:
+                      type: string
+                    type: array
+                  importPolicies:
+                    description: |-
+                      routers.list of import policies applied to this peer, in the order they must be evaluated.
+                      The name must correspond to an existing policy that has ROUTE_POLICY_TYPE_IMPORT type.
+                    items:
+                      type: string
+                    type: array
                   interface:
                     description: Name of the interface the BGP peer is associated
                       with.
@@ -2713,6 +2751,16 @@ spec:
                             type: string
                         type: object
                     type: object
+                  zeroAdvertisedRoutePriority:
+                    description: |-
+                      The user-defined zero-advertised-route-priority for a advertised-route-priority in BGP session.
+                      This value has to be set true to force the advertised_route_priority to be 0.
+                    type: boolean
+                  zeroCustomLearnedRoutePriority:
+                    description: |-
+                      The user-defined zero-custom-learned-route-priority for a custom-learned-route-priority in BGP session.
+                      This value has to be set true to force the custom_learned_route_priority to be 0.
+                    type: boolean
                 type: object
               managementPolicies:
                 default:
@@ -3005,9 +3053,23 @@ spec:
                     description: Enable IPv6 traffic over BGP Peer. If not specified,
                       it is disabled by default.
                     type: boolean
+                  exportPolicies:
+                    description: |-
+                      routers.list of export policies applied to this peer, in the order they must be evaluated.
+                      The name must correspond to an existing policy that has ROUTE_POLICY_TYPE_EXPORT type.
+                    items:
+                      type: string
+                    type: array
                   id:
                     description: an identifier for the resource with format projects/{{project}}/regions/{{region}}/routers/{{router}}/{{name}}
                     type: string
+                  importPolicies:
+                    description: |-
+                      routers.list of import policies applied to this peer, in the order they must be evaluated.
+                      The name must correspond to an existing policy that has ROUTE_POLICY_TYPE_IMPORT type.
+                    items:
+                      type: string
+                    type: array
                   interface:
                     description: Name of the interface the BGP peer is associated
                       with.
@@ -3028,6 +3090,10 @@ spec:
                       If you do not specify the next hop addresses, Google Cloud automatically
                       assigns unused addresses from the 2600:2d00:0:2::/64 or 2600:2d00:0:3::/64 range for you.
                     type: string
+                  isAdvertisedRoutePrioritySet:
+                    type: boolean
+                  isCustomLearnedPrioritySet:
+                    type: boolean
                   managementType:
                     description: The resource that configures and manages this BGP
                       peer.
@@ -3084,6 +3150,16 @@ spec:
                       The VM instance must be located in zones contained in the same region as
                       this Cloud Router. The VM instance is the peer side of the BGP session.
                     type: string
+                  zeroAdvertisedRoutePriority:
+                    description: |-
+                      The user-defined zero-advertised-route-priority for a advertised-route-priority in BGP session.
+                      This value has to be set true to force the advertised_route_priority to be 0.
+                    type: boolean
+                  zeroCustomLearnedRoutePriority:
+                    description: |-
+                      The user-defined zero-custom-learned-route-priority for a custom-learned-route-priority in BGP session.
+                      This value has to be set true to force the custom_learned_route_priority to be 0.
+                    type: boolean
                 type: object
               conditions:
                 description: Conditions of the resource.
