--- a/package/crds/compute.gcp.upbound.io_snapshots.yaml
+++ b/package/crds/compute.gcp.upbound.io_snapshots.yaml
@@ -965,6 +965,26 @@ spec:
                         - name
                         - namespace
                         type: object
+                      rsaEncryptedKeySecretRef:
+                        description: |-
+                          Specifies an encryption key stored in Google Cloud KMS, encoded in
+                          RFC 4648 base64 to either encrypt or decrypt this resource.
+                          Note: This property is sensitive and will not be displayed in the plan.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
                     type: object
                   sourceDisk:
                     description: A reference to the disk used to create this snapshot.
@@ -976,6 +996,10 @@ spec:
                       key.
                       Structure is documented below.
                     properties:
+                      kmsKeySelfLink:
+                        description: The name of the encryption key that is stored
+                          in Google Cloud KMS.
+                        type: string
                       kmsKeyServiceAccount:
                         description: |-
                           The service account used for the encryption request for the given KMS key.
@@ -984,6 +1008,26 @@ spec:
                       rawKeySecretRef:
                         description: |-
                           Specifies a 256-bit customer-supplied encryption key, encoded in
+                          RFC 4648 base64 to either encrypt or decrypt this resource.
+                          Note: This property is sensitive and will not be displayed in the plan.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
+                      rsaEncryptedKeySecretRef:
+                        description: |-
+                          Specifies an encryption key stored in Google Cloud KMS, encoded in
                           RFC 4648 base64 to either encrypt or decrypt this resource.
                           Note: This property is sensitive and will not be displayed in the plan.
                         properties:
@@ -1168,6 +1212,26 @@ spec:
                         - name
                         - namespace
                         type: object
+                      rsaEncryptedKeySecretRef:
+                        description: |-
+                          Specifies an encryption key stored in Google Cloud KMS, encoded in
+                          RFC 4648 base64 to either encrypt or decrypt this resource.
+                          Note: This property is sensitive and will not be displayed in the plan.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
                     type: object
                   sourceDisk:
                     description: A reference to the disk used to create this snapshot.
@@ -1179,6 +1243,10 @@ spec:
                       key.
                       Structure is documented below.
                     properties:
+                      kmsKeySelfLink:
+                        description: The name of the encryption key that is stored
+                          in Google Cloud KMS.
+                        type: string
                       kmsKeyServiceAccount:
                         description: |-
                           The service account used for the encryption request for the given KMS key.
@@ -1187,6 +1255,26 @@ spec:
                       rawKeySecretRef:
                         description: |-
                           Specifies a 256-bit customer-supplied encryption key, encoded in
+                          RFC 4648 base64 to either encrypt or decrypt this resource.
+                          Note: This property is sensitive and will not be displayed in the plan.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: Name of the secret.
+                            type: string
+                          namespace:
+                            description: Namespace of the secret.
+                            type: string
+                        required:
+                        - key
+                        - name
+                        - namespace
+                        type: object
+                      rsaEncryptedKeySecretRef:
+                        description: |-
+                          Specifies an encryption key stored in Google Cloud KMS, encoded in
                           RFC 4648 base64 to either encrypt or decrypt this resource.
                           Note: This property is sensitive and will not be displayed in the plan.
                         properties:
@@ -1561,6 +1649,10 @@ spec:
                       key.
                       Structure is documented below.
                     properties:
+                      kmsKeySelfLink:
+                        description: The name of the encryption key that is stored
+                          in Google Cloud KMS.
+                        type: string
                       kmsKeyServiceAccount:
                         description: |-
                           The service account used for the encryption request for the given KMS key.
