--- a/package/crds/compute.gcp.upbound.io_subnetworks.yaml
+++ b/package/crds/compute.gcp.upbound.io_subnetworks.yaml
@@ -1041,6 +1041,13 @@ spec:
                       you create the resource. This field can be set only at resource
                       creation time.
                     type: string
+                  enableFlowLogs:
+                    description: |-
+                      Whether to enable flow logging for this subnetwork. If this field is not explicitly set,
+                      it will not appear in get listings. If not set the default behavior is determined by the
+                      org policy, if there is no org policy specified, then it will default to disabled.
+                      This field isn't supported if the subnet purpose field is set to REGIONAL_MANAGED_PROXY.
+                    type: boolean
                   externalIpv6Prefix:
                     description: The range of external IPv6 addresses that are owned
                       by this subnetwork.
@@ -1052,6 +1059,14 @@ spec:
                       10.0.0.0/8 or 192.168.0.0/16. Ranges must be unique and
                       non-overlapping within a network. Only IPv4 is supported.
                       Field is optional when reserved_internal_range is defined, otherwise required.
+                    type: string
+                  ipCollection:
+                    description: |-
+                      Resource reference of a PublicDelegatedPrefix. The PDP must be a sub-PDP
+                      in EXTERNAL_IPV6_SUBNETWORK_CREATION mode.
+                      Use one of the following formats to specify a sub-PDP when creating an
+                      IPv6 NetLB forwarding rule using BYOIP:
+                      Full resource URL, as in:
                     type: string
                   ipv6AccessType:
                     description: |-
@@ -1203,10 +1218,11 @@ spec:
                     type: string
                   purpose:
                     description: |-
-                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
+                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT, PEER_MIGRATION or PRIVATE_NAT(Beta).
                       A subnet with purpose set to REGIONAL_MANAGED_PROXY is a user-created subnetwork that is reserved for regional Envoy-based load balancers.
                       A subnetwork in a given region with purpose set to GLOBAL_MANAGED_PROXY is a proxy-only subnet and is shared between all the cross-regional Envoy-based load balancers.
                       A subnetwork with purpose set to PRIVATE_SERVICE_CONNECT reserves the subnet for hosting a Private Service Connect published service.
+                      A subnetwork with purpose set to PEER_MIGRATION is a user created subnetwork that is reserved for migrating resources from one peered network to another.
                       A subnetwork with purpose set to PRIVATE_NAT is used as source range for Private NAT gateways.
                       Note that REGIONAL_MANAGED_PROXY is the preferred setting for all regional Envoy load balancers.
                       If unspecified, the purpose defaults to PRIVATE.
@@ -1275,7 +1291,7 @@ spec:
                     description: |-
                       The stack type for this subnet to identify whether the IPv6 feature is enabled or not.
                       If not specified IPV4_ONLY will be used.
-                      Possible values are: IPV4_ONLY, IPV4_IPV6.
+                      Possible values are: IPV4_ONLY, IPV4_IPV6, IPV6_ONLY.
                     type: string
                 required:
                 - region
@@ -1299,6 +1315,13 @@ spec:
                       you create the resource. This field can be set only at resource
                       creation time.
                     type: string
+                  enableFlowLogs:
+                    description: |-
+                      Whether to enable flow logging for this subnetwork. If this field is not explicitly set,
+                      it will not appear in get listings. If not set the default behavior is determined by the
+                      org policy, if there is no org policy specified, then it will default to disabled.
+                      This field isn't supported if the subnet purpose field is set to REGIONAL_MANAGED_PROXY.
+                    type: boolean
                   externalIpv6Prefix:
                     description: The range of external IPv6 addresses that are owned
                       by this subnetwork.
@@ -1310,6 +1333,14 @@ spec:
                       10.0.0.0/8 or 192.168.0.0/16. Ranges must be unique and
                       non-overlapping within a network. Only IPv4 is supported.
                       Field is optional when reserved_internal_range is defined, otherwise required.
+                    type: string
+                  ipCollection:
+                    description: |-
+                      Resource reference of a PublicDelegatedPrefix. The PDP must be a sub-PDP
+                      in EXTERNAL_IPV6_SUBNETWORK_CREATION mode.
+                      Use one of the following formats to specify a sub-PDP when creating an
+                      IPv6 NetLB forwarding rule using BYOIP:
+                      Full resource URL, as in:
                     type: string
                   ipv6AccessType:
                     description: |-
@@ -1461,10 +1492,11 @@ spec:
                     type: string
                   purpose:
                     description: |-
-                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
+                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT, PEER_MIGRATION or PRIVATE_NAT(Beta).
                       A subnet with purpose set to REGIONAL_MANAGED_PROXY is a user-created subnetwork that is reserved for regional Envoy-based load balancers.
                       A subnetwork in a given region with purpose set to GLOBAL_MANAGED_PROXY is a proxy-only subnet and is shared between all the cross-regional Envoy-based load balancers.
                       A subnetwork with purpose set to PRIVATE_SERVICE_CONNECT reserves the subnet for hosting a Private Service Connect published service.
+                      A subnetwork with purpose set to PEER_MIGRATION is a user created subnetwork that is reserved for migrating resources from one peered network to another.
                       A subnetwork with purpose set to PRIVATE_NAT is used as source range for Private NAT gateways.
                       Note that REGIONAL_MANAGED_PROXY is the preferred setting for all regional Envoy load balancers.
                       If unspecified, the purpose defaults to PRIVATE.
@@ -1530,7 +1562,7 @@ spec:
                     description: |-
                       The stack type for this subnet to identify whether the IPv6 feature is enabled or not.
                       If not specified IPV4_ONLY will be used.
-                      Possible values are: IPV4_ONLY, IPV4_IPV6.
+                      Possible values are: IPV4_ONLY, IPV4_IPV6, IPV6_ONLY.
                     type: string
                 type: object
               managementPolicies:
@@ -1714,6 +1746,13 @@ spec:
                       you create the resource. This field can be set only at resource
                       creation time.
                     type: string
+                  enableFlowLogs:
+                    description: |-
+                      Whether to enable flow logging for this subnetwork. If this field is not explicitly set,
+                      it will not appear in get listings. If not set the default behavior is determined by the
+                      org policy, if there is no org policy specified, then it will default to disabled.
+                      This field isn't supported if the subnet purpose field is set to REGIONAL_MANAGED_PROXY.
+                    type: boolean
                   externalIpv6Prefix:
                     description: The range of external IPv6 addresses that are owned
                       by this subnetwork.
@@ -1740,6 +1779,14 @@ spec:
                       non-overlapping within a network. Only IPv4 is supported.
                       Field is optional when reserved_internal_range is defined, otherwise required.
                     type: string
+                  ipCollection:
+                    description: |-
+                      Resource reference of a PublicDelegatedPrefix. The PDP must be a sub-PDP
+                      in EXTERNAL_IPV6_SUBNETWORK_CREATION mode.
+                      Use one of the following formats to specify a sub-PDP when creating an
+                      IPv6 NetLB forwarding rule using BYOIP:
+                      Full resource URL, as in:
+                    type: string
                   ipv6AccessType:
                     description: |-
                       The access type of IPv6 address this subnet holds. It's immutable and can only be specified during creation
@@ -1750,6 +1797,10 @@ spec:
                   ipv6CidrRange:
                     description: The range of internal IPv6 addresses that are owned
                       by this subnetwork.
+                    type: string
+                  ipv6GceEndpoint:
+                    description: 'Possible endpoints of this subnetwork. It can be
+                      one of the following:'
                     type: string
                   logConfig:
                     description: |-
@@ -1820,10 +1871,11 @@ spec:
                     type: string
                   purpose:
                     description: |-
-                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT or PRIVATE_NAT(Beta).
+                      The purpose of the resource. This field can be either PRIVATE, REGIONAL_MANAGED_PROXY, GLOBAL_MANAGED_PROXY, PRIVATE_SERVICE_CONNECT, PEER_MIGRATION or PRIVATE_NAT(Beta).
                       A subnet with purpose set to REGIONAL_MANAGED_PROXY is a user-created subnetwork that is reserved for regional Envoy-based load balancers.
                       A subnetwork in a given region with purpose set to GLOBAL_MANAGED_PROXY is a proxy-only subnet and is shared between all the cross-regional Envoy-based load balancers.
                       A subnetwork with purpose set to PRIVATE_SERVICE_CONNECT reserves the subnet for hosting a Private Service Connect published service.
+                      A subnetwork with purpose set to PEER_MIGRATION is a user created subnetwork that is reserved for migrating resources from one peered network to another.
                       A subnetwork with purpose set to PRIVATE_NAT is used as source range for Private NAT gateways.
                       Note that REGIONAL_MANAGED_PROXY is the preferred setting for all regional Envoy load balancers.
                       If unspecified, the purpose defaults to PRIVATE.
@@ -1895,7 +1947,14 @@ spec:
                     description: |-
                       The stack type for this subnet to identify whether the IPv6 feature is enabled or not.
                       If not specified IPV4_ONLY will be used.
-                      Possible values are: IPV4_ONLY, IPV4_IPV6.
+                      Possible values are: IPV4_ONLY, IPV4_IPV6, IPV6_ONLY.
+                    type: string
+                  state:
+                    description: |-
+                      'The state of the subnetwork, which can be one of the following values:
+                      READY: Subnetwork is created and ready to use DRAINING: only applicable to subnetworks that have the purpose
+                      set to INTERNAL_HTTPS_LOAD_BALANCER and indicates that connections to the load balancer are being drained.
+                      A subnetwork that is draining cannot be used or modified until it reaches a status of READY'
                     type: string
                   subnetworkId:
                     description: The unique identifier number for the resource. This
