--- a/examples-generated/compute/v1beta2/firewallpolicyrule.yaml
+++ b/examples-generated/compute/v1beta2/firewallpolicyrule.yaml
@@ -4,8 +4,8 @@ metadata:
   annotations:
     meta.upbound.io/example-id: compute/v1beta2/firewallpolicyrule
   labels:
-    testing.upbound.io/example-name: policy_rule
-  name: policy-rule
+    testing.upbound.io/example-name: primary
+  name: primary
 spec:
   forProvider:
     action: allow
@@ -52,7 +52,7 @@ spec:
   forProvider:
     description: Resource created for Terraform acceptance testing
     parent: ${google_folder.folder.id}
-    shortName: policy
+    shortName: fw-policy
 
 ---
 
