--- a/package/crds/compute.gcp.upbound.io_backendbuckets.yaml
+++ b/package/crds/compute.gcp.upbound.io_backendbuckets.yaml
@@ -1224,17 +1224,20 @@ spec:
                           Possible values are: USE_ORIGIN_HEADERS, FORCE_CACHE_ALL, CACHE_ALL_STATIC.
                         type: string
                       clientTtl:
-                        description: Specifies the maximum allowed TTL for cached
-                          content served by this origin.
+                        description: |-
+                          Specifies the maximum allowed TTL for cached content served by this origin. When the
+                          cache_mode is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       defaultTtl:
                         description: |-
                           Specifies the default TTL for cached content served by this origin for responses
-                          that do not have an existing valid TTL (max-age or s-max-age).
+                          that do not have an existing valid TTL (max-age or s-max-age). When the cache_mode
+                          is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       maxTtl:
-                        description: Specifies the maximum allowed TTL for cached
-                          content served by this origin.
+                        description: |-
+                          Specifies the maximum allowed TTL for cached content served by this origin. When the
+                          cache_mode is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       negativeCaching:
                         description: Negative caching allows per-status code TTLs
@@ -1522,17 +1525,20 @@ spec:
                           Possible values are: USE_ORIGIN_HEADERS, FORCE_CACHE_ALL, CACHE_ALL_STATIC.
                         type: string
                       clientTtl:
-                        description: Specifies the maximum allowed TTL for cached
-                          content served by this origin.
+                        description: |-
+                          Specifies the maximum allowed TTL for cached content served by this origin. When the
+                          cache_mode is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       defaultTtl:
                         description: |-
                           Specifies the default TTL for cached content served by this origin for responses
-                          that do not have an existing valid TTL (max-age or s-max-age).
+                          that do not have an existing valid TTL (max-age or s-max-age). When the cache_mode
+                          is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       maxTtl:
-                        description: Specifies the maximum allowed TTL for cached
-                          content served by this origin.
+                        description: |-
+                          Specifies the maximum allowed TTL for cached content served by this origin. When the
+                          cache_mode is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       negativeCaching:
                         description: Negative caching allows per-status code TTLs
@@ -1905,17 +1911,20 @@ spec:
                           Possible values are: USE_ORIGIN_HEADERS, FORCE_CACHE_ALL, CACHE_ALL_STATIC.
                         type: string
                       clientTtl:
-                        description: Specifies the maximum allowed TTL for cached
-                          content served by this origin.
+                        description: |-
+                          Specifies the maximum allowed TTL for cached content served by this origin. When the
+                          cache_mode is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       defaultTtl:
                         description: |-
                           Specifies the default TTL for cached content served by this origin for responses
-                          that do not have an existing valid TTL (max-age or s-max-age).
+                          that do not have an existing valid TTL (max-age or s-max-age). When the cache_mode
+                          is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       maxTtl:
-                        description: Specifies the maximum allowed TTL for cached
-                          content served by this origin.
+                        description: |-
+                          Specifies the maximum allowed TTL for cached content served by this origin. When the
+                          cache_mode is set to "USE_ORIGIN_HEADERS", you must omit this field.
                         type: number
                       negativeCaching:
                         description: Negative caching allows per-status code TTLs
