--- a/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
+++ b/package/crds/compute.gcp.upbound.io_instancegroupmanagers.yaml
@@ -1972,10 +1972,14 @@ spec:
                   instanceLifecyclePolicy:
                     properties:
                       defaultActionOnFailure:
-                        description: ', Default behavior for all instance or health
-                          check failures. Valid options are: REPAIR, DO_NOTHING. If
-                          DO_NOTHING then instances will not be repaired. If REPAIR
-                          (default), then failed instances will be repaired.'
+                        description: ', Specifies the action that a MIG performs on
+                          a failed VM. If the value of the on_failed_health_check
+                          field is DEFAULT_ACTION, then the same action also applies
+                          to the VMs on which your application fails a health check.
+                          Valid options are: DO_NOTHING, REPAIR. If DO_NOTHING, then
+                          MIG does not repair a failed VM. If REPAIR (default), then
+                          MIG automatically repairs a failed VM by recreating it.
+                          For more information, see about repairing VMs in a MIG.'
                         type: string
                       forceUpdateOnRepair:
                         description: ', Specifies whether to apply the group''s latest
@@ -2540,10 +2544,14 @@ spec:
                   instanceLifecyclePolicy:
                     properties:
                       defaultActionOnFailure:
-                        description: ', Default behavior for all instance or health
-                          check failures. Valid options are: REPAIR, DO_NOTHING. If
-                          DO_NOTHING then instances will not be repaired. If REPAIR
-                          (default), then failed instances will be repaired.'
+                        description: ', Specifies the action that a MIG performs on
+                          a failed VM. If the value of the on_failed_health_check
+                          field is DEFAULT_ACTION, then the same action also applies
+                          to the VMs on which your application fails a health check.
+                          Valid options are: DO_NOTHING, REPAIR. If DO_NOTHING, then
+                          MIG does not repair a failed VM. If REPAIR (default), then
+                          MIG automatically repairs a failed VM by recreating it.
+                          For more information, see about repairing VMs in a MIG.'
                         type: string
                       forceUpdateOnRepair:
                         description: ', Specifies whether to apply the group''s latest
@@ -3210,10 +3218,14 @@ spec:
                   instanceLifecyclePolicy:
                     properties:
                       defaultActionOnFailure:
-                        description: ', Default behavior for all instance or health
-                          check failures. Valid options are: REPAIR, DO_NOTHING. If
-                          DO_NOTHING then instances will not be repaired. If REPAIR
-                          (default), then failed instances will be repaired.'
+                        description: ', Specifies the action that a MIG performs on
+                          a failed VM. If the value of the on_failed_health_check
+                          field is DEFAULT_ACTION, then the same action also applies
+                          to the VMs on which your application fails a health check.
+                          Valid options are: DO_NOTHING, REPAIR. If DO_NOTHING, then
+                          MIG does not repair a failed VM. If REPAIR (default), then
+                          MIG automatically repairs a failed VM by recreating it.
+                          For more information, see about repairing VMs in a MIG.'
                         type: string
                       forceUpdateOnRepair:
                         description: ', Specifies whether to apply the group''s latest
