--- a/package/crds/compute.gcp.upbound.io_regionbackendservices.yaml
+++ b/package/crds/compute.gcp.upbound.io_regionbackendservices.yaml
@@ -2537,7 +2537,7 @@ spec:
                             See the Backend Services Overview
                             for an explanation of load balancing modes.
                             Default value is UTILIZATION.
-                            Possible values are: UTILIZATION, RATE, CONNECTION.
+                            Possible values are: UTILIZATION, RATE, CONNECTION, CUSTOM_METRICS.
                           type: string
                         capacityScaler:
                           description: |-
@@ -2550,6 +2550,27 @@ spec:
                             A setting of 0 means the group is completely drained, offering
                             0% of its available Capacity. Valid range is [0.0,1.0].
                           type: number
+                        customMetrics:
+                          description: |-
+                            The set of custom metrics that are used for CUSTOM_METRICS BalancingMode.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              dryRun:
+                                description: |-
+                                  If true, the metric data is collected and reported to Cloud
+                                  Monitoring, but is not used for load balancing.
+                                type: boolean
+                              maxUtilization:
+                                description: |-
+                                  Optional parameter to define a target utilization for the Custom Metrics
+                                  balancing mode. The valid range is [0.0, 1.0].
+                                type: number
+                              name:
+                                description: Name of the cookie.
+                                type: string
+                            type: object
+                          type: array
                         description:
                           description: |-
                             An optional description of this resource.
@@ -2926,6 +2947,31 @@ spec:
                           Defaults to 1024.
                         type: number
                     type: object
+                  customMetrics:
+                    description: |-
+                      List of custom metrics that are used for the WEIGHTED_ROUND_ROBIN locality_lb_policy.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        dryRun:
+                          description: |-
+                            If true, the metric data is collected and reported to Cloud
+                            Monitoring, but is not used for load balancing.
+                          type: boolean
+                        name:
+                          description: |-
+                            Name of a custom utilization signal. The name must be 1-64 characters
+                            long and match the regular expression a-z? which
+                            means the first character must be a lowercase letter, and all following
+                            characters must be a dash, period, underscore, lowercase letter, or
+                            digit, except the last character, which cannot be a dash, period, or
+                            underscore. For usage guidelines, see Custom Metrics balancing mode. This
+                            field can only be used for a global or regional backend service with the
+                            loadBalancingScheme set to EXTERNAL_MANAGED,
+                            INTERNAL_MANAGED INTERNAL_SELF_MANAGED.
+                          type: string
+                      type: object
+                    type: array
                   description:
                     description: An optional description of this resource.
                     type: string
@@ -3059,7 +3105,8 @@ spec:
                     type: object
                   iap:
                     description: |-
-                      Settings for enabling Cloud Identity Aware Proxy
+                      Settings for enabling Cloud Identity Aware Proxy.
+                      If OAuth client is not set, Google-managed OAuth client is used.
                       Structure is documented below.
                     properties:
                       enabled:
@@ -3112,6 +3159,19 @@ spec:
                         description: Whether to enable logging for the load balancer
                           traffic served by this backend service.
                         type: boolean
+                      optionalFields:
+                        description: Specifies the fields to include in logging. This
+                          field can only be specified if logging is enabled for this
+                          backend service.
+                        items:
+                          type: string
+                        type: array
+                      optionalMode:
+                        description: |-
+                          Specifies the optional logging mode for the load balancer traffic.
+                          Supported values: INCLUDE_ALL_OPTIONAL, EXCLUDE_ALL_OPTIONAL, CUSTOM.
+                          Possible values are: INCLUDE_ALL_OPTIONAL, EXCLUDE_ALL_OPTIONAL, CUSTOM.
+                        type: string
                       sampleRate:
                         description: |-
                           This field can only be specified if logging is enabled for this backend service. The value of
@@ -3333,7 +3393,7 @@ spec:
                             See the Backend Services Overview
                             for an explanation of load balancing modes.
                             Default value is UTILIZATION.
-                            Possible values are: UTILIZATION, RATE, CONNECTION.
+                            Possible values are: UTILIZATION, RATE, CONNECTION, CUSTOM_METRICS.
                           type: string
                         capacityScaler:
                           description: |-
@@ -3346,6 +3406,27 @@ spec:
                             A setting of 0 means the group is completely drained, offering
                             0% of its available Capacity. Valid range is [0.0,1.0].
                           type: number
+                        customMetrics:
+                          description: |-
+                            The set of custom metrics that are used for CUSTOM_METRICS BalancingMode.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              dryRun:
+                                description: |-
+                                  If true, the metric data is collected and reported to Cloud
+                                  Monitoring, but is not used for load balancing.
+                                type: boolean
+                              maxUtilization:
+                                description: |-
+                                  Optional parameter to define a target utilization for the Custom Metrics
+                                  balancing mode. The valid range is [0.0, 1.0].
+                                type: number
+                              name:
+                                description: Name of the cookie.
+                                type: string
+                            type: object
+                          type: array
                         description:
                           description: |-
                             An optional description of this resource.
@@ -3722,6 +3803,31 @@ spec:
                           Defaults to 1024.
                         type: number
                     type: object
+                  customMetrics:
+                    description: |-
+                      List of custom metrics that are used for the WEIGHTED_ROUND_ROBIN locality_lb_policy.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        dryRun:
+                          description: |-
+                            If true, the metric data is collected and reported to Cloud
+                            Monitoring, but is not used for load balancing.
+                          type: boolean
+                        name:
+                          description: |-
+                            Name of a custom utilization signal. The name must be 1-64 characters
+                            long and match the regular expression a-z? which
+                            means the first character must be a lowercase letter, and all following
+                            characters must be a dash, period, underscore, lowercase letter, or
+                            digit, except the last character, which cannot be a dash, period, or
+                            underscore. For usage guidelines, see Custom Metrics balancing mode. This
+                            field can only be used for a global or regional backend service with the
+                            loadBalancingScheme set to EXTERNAL_MANAGED,
+                            INTERNAL_MANAGED INTERNAL_SELF_MANAGED.
+                          type: string
+                      type: object
+                    type: array
                   description:
                     description: An optional description of this resource.
                     type: string
@@ -3855,7 +3961,8 @@ spec:
                     type: object
                   iap:
                     description: |-
-                      Settings for enabling Cloud Identity Aware Proxy
+                      Settings for enabling Cloud Identity Aware Proxy.
+                      If OAuth client is not set, Google-managed OAuth client is used.
                       Structure is documented below.
                     properties:
                       enabled:
@@ -3908,6 +4015,19 @@ spec:
                         description: Whether to enable logging for the load balancer
                           traffic served by this backend service.
                         type: boolean
+                      optionalFields:
+                        description: Specifies the fields to include in logging. This
+                          field can only be specified if logging is enabled for this
+                          backend service.
+                        items:
+                          type: string
+                        type: array
+                      optionalMode:
+                        description: |-
+                          Specifies the optional logging mode for the load balancer traffic.
+                          Supported values: INCLUDE_ALL_OPTIONAL, EXCLUDE_ALL_OPTIONAL, CUSTOM.
+                          Possible values are: INCLUDE_ALL_OPTIONAL, EXCLUDE_ALL_OPTIONAL, CUSTOM.
+                        type: string
                       sampleRate:
                         description: |-
                           This field can only be specified if logging is enabled for this backend service. The value of
@@ -4282,7 +4402,7 @@ spec:
                             See the Backend Services Overview
                             for an explanation of load balancing modes.
                             Default value is UTILIZATION.
-                            Possible values are: UTILIZATION, RATE, CONNECTION.
+                            Possible values are: UTILIZATION, RATE, CONNECTION, CUSTOM_METRICS.
                           type: string
                         capacityScaler:
                           description: |-
@@ -4295,6 +4415,27 @@ spec:
                             A setting of 0 means the group is completely drained, offering
                             0% of its available Capacity. Valid range is [0.0,1.0].
                           type: number
+                        customMetrics:
+                          description: |-
+                            The set of custom metrics that are used for CUSTOM_METRICS BalancingMode.
+                            Structure is documented below.
+                          items:
+                            properties:
+                              dryRun:
+                                description: |-
+                                  If true, the metric data is collected and reported to Cloud
+                                  Monitoring, but is not used for load balancing.
+                                type: boolean
+                              maxUtilization:
+                                description: |-
+                                  Optional parameter to define a target utilization for the Custom Metrics
+                                  balancing mode. The valid range is [0.0, 1.0].
+                                type: number
+                              name:
+                                description: Name of the cookie.
+                                type: string
+                            type: object
+                          type: array
                         description:
                           description: |-
                             An optional description of this resource.
@@ -4598,6 +4739,31 @@ spec:
                   creationTimestamp:
                     description: Creation timestamp in RFC3339 text format.
                     type: string
+                  customMetrics:
+                    description: |-
+                      List of custom metrics that are used for the WEIGHTED_ROUND_ROBIN locality_lb_policy.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        dryRun:
+                          description: |-
+                            If true, the metric data is collected and reported to Cloud
+                            Monitoring, but is not used for load balancing.
+                          type: boolean
+                        name:
+                          description: |-
+                            Name of a custom utilization signal. The name must be 1-64 characters
+                            long and match the regular expression a-z? which
+                            means the first character must be a lowercase letter, and all following
+                            characters must be a dash, period, underscore, lowercase letter, or
+                            digit, except the last character, which cannot be a dash, period, or
+                            underscore. For usage guidelines, see Custom Metrics balancing mode. This
+                            field can only be used for a global or regional backend service with the
+                            loadBalancingScheme set to EXTERNAL_MANAGED,
+                            INTERNAL_MANAGED INTERNAL_SELF_MANAGED.
+                          type: string
+                      type: object
+                    type: array
                   description:
                     description: An optional description of this resource.
                     type: string
@@ -4661,7 +4827,8 @@ spec:
                     x-kubernetes-list-type: set
                   iap:
                     description: |-
-                      Settings for enabling Cloud Identity Aware Proxy
+                      Settings for enabling Cloud Identity Aware Proxy.
+                      If OAuth client is not set, Google-managed OAuth client is used.
                       Structure is documented below.
                     properties:
                       enabled:
@@ -4698,6 +4865,19 @@ spec:
                         description: Whether to enable logging for the load balancer
                           traffic served by this backend service.
                         type: boolean
+                      optionalFields:
+                        description: Specifies the fields to include in logging. This
+                          field can only be specified if logging is enabled for this
+                          backend service.
+                        items:
+                          type: string
+                        type: array
+                      optionalMode:
+                        description: |-
+                          Specifies the optional logging mode for the load balancer traffic.
+                          Supported values: INCLUDE_ALL_OPTIONAL, EXCLUDE_ALL_OPTIONAL, CUSTOM.
+                          Possible values are: INCLUDE_ALL_OPTIONAL, EXCLUDE_ALL_OPTIONAL, CUSTOM.
+                        type: string
                       sampleRate:
                         description: |-
                           This field can only be specified if logging is enabled for this backend service. The value of
