--- a/package/crds/compute.gcp.upbound.io_routes.yaml
+++ b/package/crds/compute.gcp.upbound.io_routes.yaml
@@ -836,6 +836,27 @@ spec:
             properties:
               atProvider:
                 properties:
+                  asPaths:
+                    description: Structure is documented below.
+                    items:
+                      properties:
+                        asLists:
+                          description: |-
+                            (Output)
+                            The AS numbers of the AS Path.
+                          items:
+                            type: number
+                          type: array
+                        pathSegmentType:
+                          description: |-
+                            (Output)
+                            The type of the AS Path, which can be one of the following values:
+                          type: string
+                      type: object
+                    type: array
+                  creationTimestamp:
+                    description: Creation timestamp in RFC3339 text format.
+                    type: string
                   description:
                     description: |-
                       An optional description of this resource. Provide this property
@@ -858,6 +879,10 @@ spec:
                       Currently, you can only specify the internet gateway, using a full or
                       partial valid URL:
                     type: string
+                  nextHopHub:
+                    description: The hub network that should handle matching packets,
+                      which should conform to RFC1035.
+                    type: string
                   nextHopIlb:
                     description: |-
                       The IP address or URL to a forwarding rule of type
@@ -875,12 +900,29 @@ spec:
                   nextHopInstanceZone:
                     description: .
                     type: string
+                  nextHopInterRegionCost:
+                    description: Internal fixed region-to-region cost that Google
+                      Cloud calculates based on factors such as network performance,
+                      distance, and available bandwidth between regions.
+                    type: string
                   nextHopIp:
                     description: Network IP address of an instance that should handle
                       matching packets.
                     type: string
+                  nextHopMed:
+                    description: Multi-Exit Discriminator, a BGP route metric that
+                      indicates the desirability of a particular route in a network.
+                    type: string
                   nextHopNetwork:
                     description: URL to a Network that should handle matching packets.
+                    type: string
+                  nextHopOrigin:
+                    description: Indicates the origin of the route. Can be IGP (Interior
+                      Gateway Protocol), EGP (Exterior Gateway Protocol), or INCOMPLETE.
+                    type: string
+                  nextHopPeering:
+                    description: The network peering name that should handle matching
+                      packets, which should conform to RFC1035.
                     type: string
                   nextHopVpnTunnel:
                     description: URL to a VpnTunnel that should handle matching packets.
@@ -898,6 +940,14 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  routeStatus:
+                    description: 'The status of the route, which can be one of the
+                      following values:'
+                    type: string
+                  routeType:
+                    description: 'The type of this route, which can be one of the
+                      following values:'
+                    type: string
                   selfLink:
                     description: The URI of the created resource.
                     type: string
@@ -907,6 +957,45 @@ spec:
                       type: string
                     type: array
                     x-kubernetes-list-type: set
+                  warnings:
+                    description: |-
+                      If potential misconfigurations are detected for this route, this field will be populated with warning messages.
+                      Structure is documented below.
+                    items:
+                      properties:
+                        code:
+                          description: |-
+                            (Output)
+                            A warning code, if applicable. For example, Compute Engine returns
+                            NO_RESULTS_ON_PAGE if there are no results in the response.
+                          type: string
+                        data:
+                          description: |-
+                            (Output)
+                            Metadata about this warning in key: value format. For example:
+                            "data": [  {  "key": "scope",  "value": "zones/us-east1-d"  }
+                            Structure is documented below.
+                          items:
+                            properties:
+                              key:
+                                description: |-
+                                  (Output)
+                                  A key that provides more detail on the warning being returned. For example, for warnings where there are no results in a list request for a particular zone, this key might be scope and the key value might be the zone name. Other examples might be a key indicating a deprecated resource and a suggested replacement, or a warning about invalid network settings (for example, if an instance attempts to perform IP forwarding but is not enabled for IP forwarding).
+                                type: string
+                              value:
+                                description: |-
+                                  (Output)
+                                  A warning data value corresponding to the key.
+                                type: string
+                            type: object
+                          type: array
+                        message:
+                          description: |-
+                            (Output)
+                            A human-readable description of the warning code.
+                          type: string
+                      type: object
+                    type: array
                 type: object
               conditions:
                 description: Conditions of the resource.
