--- a/package/crds/compute.gcp.upbound.io_targethttpsproxies.yaml
+++ b/package/crds/compute.gcp.upbound.io_targethttpsproxies.yaml
@@ -240,7 +240,7 @@ spec:
                       Early Data allows a TLS resumption handshake to include the initial application payload
                       (a HTTP request) alongside the handshake, reducing the effective round trips to “zero”.
                       This applies to TLS 1.3 connections over TCP (HTTP/2) as well as over UDP (QUIC/h3).
-                      Possible values are: STRICT, PERMISSIVE, DISABLED.
+                      Possible values are: STRICT, PERMISSIVE, UNRESTRICTED, DISABLED.
                     type: string
                   urlMap:
                     description: |-
@@ -501,7 +501,7 @@ spec:
                       Early Data allows a TLS resumption handshake to include the initial application payload
                       (a HTTP request) alongside the handshake, reducing the effective round trips to “zero”.
                       This applies to TLS 1.3 connections over TCP (HTTP/2) as well as over UDP (QUIC/h3).
-                      Possible values are: STRICT, PERMISSIVE, DISABLED.
+                      Possible values are: STRICT, PERMISSIVE, UNRESTRICTED, DISABLED.
                     type: string
                   urlMap:
                     description: |-
@@ -854,7 +854,7 @@ spec:
                       Early Data allows a TLS resumption handshake to include the initial application payload
                       (a HTTP request) alongside the handshake, reducing the effective round trips to “zero”.
                       This applies to TLS 1.3 connections over TCP (HTTP/2) as well as over UDP (QUIC/h3).
-                      Possible values are: STRICT, PERMISSIVE, DISABLED.
+                      Possible values are: STRICT, PERMISSIVE, UNRESTRICTED, DISABLED.
                     type: string
                   urlMap:
                     description: |-
